--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
+    "helmet": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-file-base64": "^1.0.3",
