--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/index.js",
-    "start": "node server/index.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    "start": "node index.js",
+    "build": "npm install && cd client && npm install && npm run build && cd ..",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
